fix burger positioning on tablet

--- a/src/ui/navigation/navigation.module.scss
+++ b/src/ui/navigation/navigation.module.scss
@@ -3,8 +3,13 @@
 
 .navigation{
     position: fixed;
-    top: 3rem;
-    right: 2rem;
+    top: 1rem;
+    right: 1rem;
+
+    @include tablet{
+        top: 2rem;
+        right: 2rem;
+    }
 
     @include desktop{
         text-align: center;
